--- a/avengersInfo.html
+++ b/avengersInfo.html
@@ -19,17 +19,15 @@
                 <div class="options">
                     <a href="index.html">HomePage</a>
                     <a href="avengersInfo.html">Characters</a>
-                    <a href="movies.html">Movies</a>
+                    <a href="movies.html">Movies</a><a href="aboutMe.html">About writter</a>
                 </div>    
             </div>
             
             <div class="name">
-            <h1>Marvel Cinematic Universe</h1>
+                <h1>Marvel Cinematic Universe</h1>
             </div>
         </div>
-        <div><a href="aboutMe.html">About writter</a></div>
-
-
+        
 
         <br><br><br><br>
 
